--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_bg.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Наистина ли искате
 are-you-sure-you-want-to-deactivate-workflow=Сигурни ли сте, че искате да деактивирате работния процес?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
 are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
@@ -4712,6 +4713,7 @@ delete-live-page=Изтриване на страницата на живо. (Au
 delete-missing-layouts=Изтриване на липсващи страници
 delete-missing-layouts-help=Ако е избрана тази опция, всички страници в този сайт, които не се намират във файла за импорт LAR, се изтриват. (Automatic Translation)
 delete-missing-layouts-staging-help=Ако тази опция е избрана, всички страници в среда на живо, които не са налични в средата на спиране се изтриват. (Automatic Translation)
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Изтриване на страница
 delete-personal-data=Изтриване на лични данни (Automatic Translation)
 delete-question=Изтриване на въпроса? (Automatic Translation)
@@ -10148,6 +10150,7 @@ notification-recipients=Получатели на известия (Automatic Tr
 notification-template-type=Тип шаблон за известяване (Automatic Translation)
 notification-templates=Шаблони за известяване (Automatic Translation)
 notification-type=Вид уведомяване (Automatic Translation)
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=Уведомяването е изтрито успешно. (Automatic Translation)
 notification-was-marked-as-read-successfully=Уведомяването е маркирано като прочетено успешно. (Automatic Translation)
 notification-was-marked-as-unread-successfully=Уведомяването е маркирано като непрочетено успешно. (Automatic Translation)
@@ -10156,7 +10159,6 @@ notifications-body=Орган за известия (Automatic Translation)
 notifications-email=Имейл за известия (Automatic Translation)
 notifications-list-x=Notifications List ({0}) (Automatic Copy)
 notifications-subject=Предмет на известията (Automatic Translation)
-notifications-type=Notifications Type (Automatic Copy)
 notifications-were-deleted-successfully=Известията бяха изтрити успешно. (Automatic Translation)
 notifications-were-marked-as-read-successfully=Известията са маркирани като прочетени успешно. (Automatic Translation)
 notifications-were-marked-as-unread-successfully=Известията са маркирани като непрочетени успешно. (Automatic Translation)
