--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fa.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=آیا مطمئن هستید که 
 are-you-sure-you-want-to-deactivate-workflow=آیا مطمئن هستید که می‌خواهید غیر فعال کنید؟
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
 are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
@@ -4712,6 +4713,7 @@ delete-live-page=صفحه اصلی را حذف کنید
 delete-missing-layouts=صفحه‌هایی که در فایل LAR وجود ندارند حذف شوند.
 delete-missing-layouts-help=ار این گزینه انتخاب شده است، تمام صفحات سایت که در فایل ورودی LAR وجود ندارند، حذف خواهند شد.
 delete-missing-layouts-staging-help=ار این گزینه انتخاب شده است، تمام صفحات محیط اصلی که در محیط دسته‌بندی وجود ندارند، حذف خواهند شد.
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=حذف صفحه
 delete-personal-data=حذف داده های شخصی (Automatic Translation)
 delete-question=حذف سوال؟ (Automatic Translation)
@@ -10148,6 +10150,7 @@ notification-recipients=دریافت کنندگان یادآوری‌ها
 notification-template-type=نوع الگوی اطلاع‌رسانی
 notification-templates=الگوهای اطلاع‌رسانی
 notification-type=نوع یاداوری
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=هشدار با موفقیت حذف شد.
 notification-was-marked-as-read-successfully=اعلان به عنوان خوانده شده با موفقیت علامت گذاری شد.
 notification-was-marked-as-unread-successfully=اعلان با موفقیت خوانده نشد.
@@ -10156,7 +10159,6 @@ notifications-body=اطلاعیه ها بدن (Automatic Translation)
 notifications-email=ایمیل اعلان ها (Automatic Translation)
 notifications-list-x=Notifications List ({0}) (Automatic Copy)
 notifications-subject=موضوع اعلان ها (Automatic Translation)
-notifications-type=Notifications Type (Automatic Copy)
 notifications-were-deleted-successfully=اعلان ها با موفقیت حذف شدند. (Automatic Translation)
 notifications-were-marked-as-read-successfully=اعلان ها به عنوان خوانده شده با موفقیت مشخص شدند. (Automatic Translation)
 notifications-were-marked-as-unread-successfully=اعلان ها با موفقیت خوانده نشده مشخص شدند. (Automatic Translation)
