--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr_CA.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Voulez-vous vraiment désactiver c
 are-you-sure-you-want-to-deactivate-workflow=Êtes-vous sûr vous voulez-vous mettre le déroulement des opérations hors tension ?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
 are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
@@ -4712,6 +4713,7 @@ delete-live-page=Page de phase de suppression.
 delete-missing-layouts=Suppression des mis en page manquante
 delete-missing-layouts-help=Si cette option est choisie, toutes les pages dans ce site qui ne sont pas présentes dans l'import de fichier Lar sont supprimées.
 delete-missing-layouts-staging-help=Si cette option est choisie, toutes les pages de l'environnement live qui ne sont pas présentes dans l'environnement de staging sont supprimées.
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Supprimer la page
 delete-personal-data=Supprimer les données personnelles
 delete-question=Supprimer la question ?
@@ -10148,6 +10150,7 @@ notification-recipients=Destinataires des notifications
 notification-template-type=Modèle de type notification
 notification-templates=Modèles de notification
 notification-type=Type de notification
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=La notification a bien été supprimée.
 notification-was-marked-as-read-successfully=La notification a bien été marquée comme lue.
 notification-was-marked-as-unread-successfully=La notification a bien été marquée comme non lue.
@@ -10156,7 +10159,6 @@ notifications-body=Corps des notifications
 notifications-email=E-mail des notifications
 notifications-list-x=Liste des notifications ({0})
 notifications-subject=Objet des notifications
-notifications-type=Notifications Type (Automatic Copy)
 notifications-were-deleted-successfully=Les notifications ont bien été supprimées.
 notifications-were-marked-as-read-successfully=Les notification ont bien été marquées comme lues.
 notifications-were-marked-as-unread-successfully=Les notifications ont bien été marquées comme non lues.
