--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_gl.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Ten certeza de que desexa desactiv
 are-you-sure-you-want-to-deactivate-workflow=¿Estás seguro de que queres desactivar o fluxo de traballo?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
 are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
@@ -4712,6 +4713,7 @@ delete-live-page=Borrar páxina live.
 delete-missing-layouts=Borrar as páxinas non presentes no arquivo importado
 delete-missing-layouts-help=Se esta opción é seleccionada, todas as páxinas neste sitio que non estean presentes no ficheiro LAR a importar serán eliminadas.
 delete-missing-layouts-staging-help=Se esta opción é seleccionada, todas as páxinas na contorna de produción (live) que non estean presentes na contorna de staging serán eliminadas.
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Borrar páxina
 delete-personal-data=Delete Personal Data (Automatic Copy)
 delete-question=Delete question? (Automatic Copy)
@@ -10148,6 +10150,7 @@ notification-recipients=Notification Recipients (Automatic Copy)
 notification-template-type=Tipo de modelo de notificación
 notification-templates=Tipo de modelo de notificación
 notification-type=Notification Type (Automatic Copy)
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=Notification was deleted successfully. (Automatic Copy)
 notification-was-marked-as-read-successfully=Notification was marked as read successfully. (Automatic Copy)
 notification-was-marked-as-unread-successfully=Notification was marked as unread successfully. (Automatic Copy)
@@ -10156,7 +10159,6 @@ notifications-body=Notifications Body (Automatic Copy)
 notifications-email=Notifications Email (Automatic Copy)
 notifications-list-x=Notifications List ({0}) (Automatic Copy)
 notifications-subject=Notifications Subject (Automatic Copy)
-notifications-type=Notifications Type (Automatic Copy)
 notifications-were-deleted-successfully=Notifications were deleted successfully. (Automatic Copy)
 notifications-were-marked-as-read-successfully=Notifications were marked as read successfully. (Automatic Copy)
 notifications-were-marked-as-unread-successfully=Notifications were marked as unread successfully. (Automatic Copy)
