--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Biztosan deaktiválni kívánja ez
 are-you-sure-you-want-to-deactivate-workflow=Biztosan deaktiváljuk a munkafolyamatot?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Biztosan törölni kívánja az összes műveletet és azok beállításait?
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Biztosan törölni kívánja az összes hozzárendelést és azok beállításait?
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Biztosan törölni kívánja az összes időzítőt és azok beállításait?
 are-you-sure-you-want-to-delete-blueprints=Biztosan törli a kiválasztott tervrajzokat?
 are-you-sure-you-want-to-delete-elements=Biztosan törli a kiválasztott elemeket?
@@ -4712,6 +4713,7 @@ delete-live-page=Élő oldal törlése
 delete-missing-layouts=Hiányzó oldalak törlése
 delete-missing-layouts-help=Ha ez a lehetőséget választod, az összes oldal törlődik ezen a webhelyen, ami nem talalálható meg a LAR import fájlban.
 delete-missing-layouts-staging-help=Ha ezt a lehetőséget választod, az össszes oldal törlődik az élő környezetben ami nem szerepel a staging környezetben.
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Oldal törlése
 delete-personal-data=Személyes adatok törlése
 delete-question=Törli a kérdést?
@@ -10151,6 +10153,7 @@ notification-recipients=Értesítések fogadói
 notification-template-type=Figyelmeztetés sablon típus
 notification-templates=Figyelmeztetés sablonok
 notification-type=Értesítés típus
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=Az értesítés sikeresen törölve.
 notification-was-marked-as-read-successfully=Az értesítés sikeresen megjelölve olvasottként.
 notification-was-marked-as-unread-successfully=Az értesítés sikeresen megjelölve olvasatlanként.
@@ -10159,7 +10162,6 @@ notifications-body=Értesítések szövege
 notifications-email=Értesítési e-mail
 notifications-list-x=Értesítések listája ({0})
 notifications-subject=Értesítés tárgya
-notifications-type=Értesítések típusa
 notifications-were-deleted-successfully=Az értesítések sikeresen törölve.
 notifications-were-marked-as-read-successfully=Az értesítések sikeresen megjelölve olvasottként.
 notifications-were-marked-as-unread-successfully=Az értesítések sikeresen megjelölve olvasatlanként.
