--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_in.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Yakin ingin menonaktifkan pengguna
 are-you-sure-you-want-to-deactivate-workflow=Apakah Anda yakin ingin menonaktifkan alur kerja?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
 are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
@@ -4712,6 +4713,7 @@ delete-live-page=Hapus hidup halaman.
 delete-missing-layouts=Hapus Halaman yang hilang
 delete-missing-layouts-help=Jika opsi ini dipilih, semua halaman di situs ini yang tidak ada dalam file impor LAR akan dihapus. (Automatic Translation)
 delete-missing-layouts-staging-help=Jika opsi ini dipilih, semua halaman di lingkungan langsung yang tidak ada di lingkungan pementasan dihapus. (Automatic Translation)
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Hapus Halaman
 delete-personal-data=Menghapus Data Pribadi (Automatic Translation)
 delete-question=Hapus pertanyaan? (Automatic Translation)
@@ -10148,6 +10150,7 @@ notification-recipients=Penerima Pemberitahuan (Automatic Translation)
 notification-template-type=Pemberitahuan Jenis Template
 notification-templates=Pemberitahuan Jenis Template
 notification-type=Tipe Pemberitahuan (Automatic Translation)
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=Pemberitahuan berhasil dihapus. (Automatic Translation)
 notification-was-marked-as-read-successfully=Pemberitahuan berhasil ditandai sebagai berhasil dibaca. (Automatic Translation)
 notification-was-marked-as-unread-successfully=Pemberitahuan ditandai sebagai belum dibaca berhasil dibaca. (Automatic Translation)
@@ -10156,7 +10159,6 @@ notifications-body=Isi Pemberitahuan (Automatic Translation)
 notifications-email=Email Pemberitahuan (Automatic Translation)
 notifications-list-x=Notifications List ({0}) (Automatic Copy)
 notifications-subject=Subjek Pemberitahuan (Automatic Translation)
-notifications-type=Notifications Type (Automatic Copy)
 notifications-were-deleted-successfully=Pemberitahuan berhasil dihapus. (Automatic Translation)
 notifications-were-marked-as-read-successfully=Pemberitahuan ditandai sebagai berhasil dibaca. (Automatic Translation)
 notifications-were-marked-as-unread-successfully=Pemberitahuan ditandai sebagai belum dibaca berhasil dibaca. (Automatic Translation)
