--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_it.properties
@@ -1550,6 +1550,7 @@ are-you-sure-you-want-to-deactivate-this-user=Sicuro di voler disattivare l'uten
 are-you-sure-you-want-to-deactivate-workflow=Sei sicuro di voler disattivare il workflow?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
 are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
@@ -4711,6 +4712,7 @@ delete-live-page=Cancella la pagina live.
 delete-missing-layouts=Cancella le Pagine Mancanti
 delete-missing-layouts-help=Se si sceglie questa opzione, saranno canellate tutte le pagine di questo sito che non sono presenti nel file LAR di importazione.
 delete-missing-layouts-staging-help=Se si sceglie questa opzione, saranno cancellate tutte le pagine dell'ambiente live che non sono presenti nell'ambiente di staging.
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Cancella Pagina
 delete-personal-data=Cancella dati personali
 delete-question=Eliminare la domanda? (Automatic Translation)
@@ -10149,6 +10151,7 @@ notification-recipients=Destinatari delle notifiche
 notification-template-type=Tipo Template di Notifica
 notification-templates=Template di Notifica
 notification-type=Tipo Notifica
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=La notifica è stata eliminata correttamente. (Automatic Translation)
 notification-was-marked-as-read-successfully=La notifica è stata contrassegnata come letta correttamente. (Automatic Translation)
 notification-was-marked-as-unread-successfully=La notifica è stata contrassegnata come non leta. (Automatic Translation)
@@ -10157,7 +10160,6 @@ notifications-body=Corpo notifiche (Automatic Translation)
 notifications-email=Notifiche E-mail (Automatic Translation)
 notifications-list-x=Elenco delle notifiche ({0})
 notifications-subject=Oggetto notifiche (Automatic Translation)
-notifications-type=Notifications Type (Automatic Copy)
 notifications-were-deleted-successfully=Le notifiche sono state eliminate correttamente. (Automatic Translation)
 notifications-were-marked-as-read-successfully=Le notifiche sono state contrassegnate come lette correttamente. (Automatic Translation)
 notifications-were-marked-as-unread-successfully=Le notifiche sono state contrassegnate come non lette correttamente. (Automatic Translation)
