--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_lt.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Ar tikrai norite išjungti šį va
 are-you-sure-you-want-to-deactivate-workflow=Ar tikrai norite išjungti darbo eigą? (Automatic Translation)
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
 are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
@@ -4712,6 +4713,7 @@ delete-live-page=Naikinti tiesioginį puslapį. (Automatic Translation)
 delete-missing-layouts=Naikinti trūkstamus puslapius (Automatic Translation)
 delete-missing-layouts-help=Jei ši parinktis pasirinkta, panaikinami visi šios svetainės puslapiai, kurių nėra importavimo LAR faile. (Automatic Translation)
 delete-missing-layouts-staging-help=Jei ši parinktis pasirinkta, panaikinami visi puslapiai tiesioginėje aplinkoje, kurių nėra sustojimo aplinkoje. (Automatic Translation)
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Naikinti puslapį (Automatic Translation)
 delete-personal-data=Naikinti asmeninius duomenis (Automatic Translation)
 delete-question=Naikinti klausimą? (Automatic Translation)
@@ -10148,6 +10150,7 @@ notification-recipients=Perspėjimo gavėjai (Automatic Translation)
 notification-template-type=Perspėjimo šablono tipas (Automatic Translation)
 notification-templates=Perspėjimų šablonai (Automatic Translation)
 notification-type=Perspėjimo tipas (Automatic Translation)
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=Pranešimas sėkmingai panaikintas. (Automatic Translation)
 notification-was-marked-as-read-successfully=Pranešimas pažymėtas kaip sėkmingai perskaitytas. (Automatic Translation)
 notification-was-marked-as-unread-successfully=Pranešimas sėkmingai pažymėtas kaip neskaitytas. (Automatic Translation)
@@ -10156,7 +10159,6 @@ notifications-body=Pranešimų įstaiga (Automatic Translation)
 notifications-email=Pranešimai El. paštas (Automatic Translation)
 notifications-list-x=Notifications List ({0}) (Automatic Copy)
 notifications-subject=Pranešimų tema (Automatic Translation)
-notifications-type=Notifications Type (Automatic Copy)
 notifications-were-deleted-successfully=Pranešimai sėkmingai panaikinti. (Automatic Translation)
 notifications-were-marked-as-read-successfully=Pranešimai buvo pažymėti kaip sėkmingai perskaityti. (Automatic Translation)
 notifications-were-marked-as-unread-successfully=Pranešimai sėkmingai pažymėti kaip neskaityti. (Automatic Translation)
