--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ms.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Adakah awda pasti hendak menyahakt
 are-you-sure-you-want-to-deactivate-workflow=Adakah awda pasti hendak menyahaktifkan aliran kerja? (Automatic Translation)
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
 are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
@@ -4712,6 +4713,7 @@ delete-live-page=Hapuskan halaman langsung. (Automatic Translation)
 delete-missing-layouts=Hapuskan Halaman Hilang (Automatic Translation)
 delete-missing-layouts-help=Jika pilihan ini dipilih, semua halaman dalam tapak ini yang tidak terdapat dalam fail import LAR dihapuskan. (Automatic Translation)
 delete-missing-layouts-staging-help=Jika pilihan ini dipilih, semua halaman dalam persekitaran langsung yang tidak terdapat dalam persekitaran pementasan dipadamkan. (Automatic Translation)
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Hapus Halaman (Automatic Translation)
 delete-personal-data=Hapuskan Data Peribadi (Automatic Translation)
 delete-question=Hapuskan soalan? (Automatic Translation)
@@ -10148,6 +10150,7 @@ notification-recipients=Penerima Pemberitahuan (Automatic Translation)
 notification-template-type=Jenis Templat Pemberitahuan (Automatic Translation)
 notification-templates=Templat Pemberitahuan (Automatic Translation)
 notification-type=Jenis Pemberitahuan (Automatic Translation)
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=Pemberitahuan telah berjaya dihapuskan. (Automatic Translation)
 notification-was-marked-as-read-successfully=Pemberitahuan telah ditandakan sebagai berjaya dibaca. (Automatic Translation)
 notification-was-marked-as-unread-successfully=Pemberitahuan telah ditandakan sebagai belum dibaca dengan jayanya. (Automatic Translation)
@@ -10156,7 +10159,6 @@ notifications-body=Badan Pemberitahuan (Automatic Translation)
 notifications-email=E-mel Pemberitahuan (Automatic Translation)
 notifications-list-x=Notifications List ({0}) (Automatic Copy)
 notifications-subject=Subjek Pemberitahuan (Automatic Translation)
-notifications-type=Notifications Type (Automatic Copy)
 notifications-were-deleted-successfully=Pemberitahuan berjaya dihapuskan. (Automatic Translation)
 notifications-were-marked-as-read-successfully=Pemberitahuan telah ditandakan sebagai berjaya dibaca. (Automatic Translation)
 notifications-were-marked-as-unread-successfully=Pemberitahuan telah ditandakan sebagai belum dibaca dengan jayanya. (Automatic Translation)
