--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Weet u zeker dat u deze gebruiker 
 are-you-sure-you-want-to-deactivate-workflow=Weet u zeker dat u deze werkstroom wilt deactiveren?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Weet u zeker dat u alle acties met de bijbehorende instellingen wilt verwijderen?
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Weet u zeker dat u alle toewijzingen en de bijbehorende instellingen wilt verwijderen?
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Weet u zeker dat u de geselecteerde blauwdrukken wilt verwijderen?
 are-you-sure-you-want-to-delete-elements=Weet u zeker dat u de geselecteerde elementen wilt verwijderen?
@@ -4712,6 +4713,7 @@ delete-live-page=Pagina verwijderen uit productiefase.
 delete-missing-layouts=Ontbrekende pagina's verwijderen
 delete-missing-layouts-help=Als u deze optie selecteert, worden alle pagina's die niet aanwezig zijn in het LAR-importbestand, verwijderd.
 delete-missing-layouts-staging-help=Als u deze optie selecteert, worden alle pagina's in de liveomgeving die niet aanwezig zijn in de stagingomgeving, verwijderd.
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Pagina verwijderen
 delete-personal-data=Persoonlijke data verwijderen
 delete-question=Vraag verwijderen?
@@ -10151,6 +10153,7 @@ notification-recipients=Melding geadresseerden
 notification-template-type=Sjabloontype voor melding
 notification-templates=Meldingtemplates
 notification-type=Meldingstype
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=De melding werd verwijderd.
 notification-was-marked-as-read-successfully=De melding werd gemarkeerd als gelezen.
 notification-was-marked-as-unread-successfully=De melding werd gemarkeerd als ongelezen.
@@ -10159,7 +10162,6 @@ notifications-body=Inhoud meldingen
 notifications-email=E-mail meldingen
 notifications-list-x=Meldingenlijst ({0})
 notifications-subject=Onderwerp meldingen
-notifications-type=Type meldingen
 notifications-were-deleted-successfully=De meldingen werden verwijderd.
 notifications-were-marked-as-read-successfully=De meldingen werden gemarkeerd als gelezen.
 notifications-were-marked-as-unread-successfully=De meldingen werden gemarkeerd als ongelezen.
