--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Tem certeza que deseja desativar e
 are-you-sure-you-want-to-deactivate-workflow=Você tem certeza que deseja desativar o fluxo de trabalho?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Você tem certeza que deseja excluir todas as ações e suas configurações?
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Você tem certeza que deseja excluir todas as atribuições e suas configurações?
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Tem certeza que deseja excluir blueprints selecionadas?
 are-you-sure-you-want-to-delete-elements=Tem certeza que deseja excluir elementos selecionados?
@@ -4712,6 +4713,7 @@ delete-live-page=Excluir página em produção.
 delete-missing-layouts=Excluir Páginas Faltantes
 delete-missing-layouts-help=Se esta opção for escolhida, todas as páginas deste site que não estiverem presentes no arquivo de importação LAR serão excluídas.
 delete-missing-layouts-staging-help=Se esta opção for escolhida, todas as páginas no ambiente Live que não estiverem presentes no ambiente de Staging são excluídas.
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Excluir Página
 delete-personal-data=Excluir os dados pessoais
 delete-question=Excluir pergunta?
@@ -10148,6 +10150,7 @@ notification-recipients=Destinatários da notificação
 notification-template-type=Tipo de modelo de notificação
 notification-templates=Modelos de notificação
 notification-type=Tipo de Notificação
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=A notificação foi excluída com sucesso.
 notification-was-marked-as-read-successfully=A notificação foi marcada como lida com sucesso.
 notification-was-marked-as-unread-successfully=A notificação foi marcada como não lida com sucesso.
@@ -10156,7 +10159,6 @@ notifications-body=Corpo de Notificações
 notifications-email=Notificações de E-mail
 notifications-list-x=Lista de notificações ({0})
 notifications-subject=Assunto das Notificações
-notifications-type=Tpo de notificação
 notifications-were-deleted-successfully=As notificações foram excluídas com sucesso.
 notifications-were-marked-as-read-successfully=As notificações foram marcadas como lidas com sucesso.
 notifications-were-marked-as-unread-successfully=As notificações foram marcadas como não lidas com sucesso.
