--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_PT.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Confirma que pretende desactivar e
 are-you-sure-you-want-to-deactivate-workflow=Confirma que pretende desactivar o fluxo de trabalho?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
 are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
@@ -4712,6 +4713,7 @@ delete-live-page=Eliminar página em produção (live).
 delete-missing-layouts=Remover Páginas em Falta
 delete-missing-layouts-help=Se esta opção for selecionada, todas as páginas neste site que não estejam presentes no ficheiro LAR a importar serão removidas.
 delete-missing-layouts-staging-help=Se esta opção for selecionada, todas as páginas no ambiente de produção (live), que não estejam presentes no ambiente de staging são removidas.
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Eliminar Página
 delete-personal-data=Excluir dados pessoais (Automatic Translation)
 delete-question=Excluir pergunta? (Automatic Translation)
@@ -10150,6 +10152,7 @@ notification-recipients=Destinatários de notificações
 notification-template-type=Tipo de Template de Notificação
 notification-templates=Templates de Notificação
 notification-type=Tipo de Notificação
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=A notificação foi excluída com sucesso. (Automatic Translation)
 notification-was-marked-as-read-successfully=A notificação foi marcada como lida com sucesso. (Automatic Translation)
 notification-was-marked-as-unread-successfully=A notificação foi marcada como não lida com sucesso. (Automatic Translation)
@@ -10158,7 +10161,6 @@ notifications-body=Corpo de Notificações (Automatic Translation)
 notifications-email=E-mails de notificações (Automatic Translation)
 notifications-list-x=Notifications List ({0}) (Automatic Copy)
 notifications-subject=Assunto notificações (Automatic Translation)
-notifications-type=Notifications Type (Automatic Copy)
 notifications-were-deleted-successfully=As notificações foram excluídas com sucesso. (Automatic Translation)
 notifications-were-marked-as-read-successfully=As notificações foram marcadas como lidas com sucesso. (Automatic Translation)
 notifications-were-marked-as-unread-successfully=As notificações foram marcadas como não lidas com sucesso. (Automatic Translation)
