--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sl.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Ali ste prepričani, da želite de
 are-you-sure-you-want-to-deactivate-workflow=Ste prepričani, da želite deaktivirati potek dela?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
 are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
@@ -4712,6 +4713,7 @@ delete-live-page=Izbriši stran v živo. (Automatic Translation)
 delete-missing-layouts=Izbriši manjkajoče strani
 delete-missing-layouts-help=Če je izbrana ta možnost, se izbrišejo vse strani na tem mestu, ki niso prisotne v datoteki LAR za uvoz. (Automatic Translation)
 delete-missing-layouts-staging-help=Če je izbrana ta možnost, se izbrišejo vse strani v okolju v živo, ki niso prisotne v okoljih za utesnjevanje. (Automatic Translation)
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Izbriši stran
 delete-personal-data=Brisanje osebnih podatkov (Automatic Translation)
 delete-question=Ali želite izbrisati vprašanje? (Automatic Translation)
@@ -10148,6 +10150,7 @@ notification-recipients=Prejemniki obvestil (Automatic Translation)
 notification-template-type=Vrsta predloge obvestila (Automatic Translation)
 notification-templates=Predloge obvestil (Automatic Translation)
 notification-type=Vrsta obvestila (Automatic Translation)
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=Obvestilo je bilo uspešno izbrisano. (Automatic Translation)
 notification-was-marked-as-read-successfully=Obvestilo je bilo označeno kot uspešno branje. (Automatic Translation)
 notification-was-marked-as-unread-successfully=Obvestilo je bilo uspešno označeno kot neprebrano. (Automatic Translation)
@@ -10156,7 +10159,6 @@ notifications-body=Organ za obvestila (Automatic Translation)
 notifications-email=Obvestila E-pošta (Automatic Translation)
 notifications-list-x=Notifications List ({0}) (Automatic Copy)
 notifications-subject=Zadeva obvestil (Automatic Translation)
-notifications-type=Notifications Type (Automatic Copy)
 notifications-were-deleted-successfully=Obvestila so bila uspešno izbrisana. (Automatic Translation)
 notifications-were-marked-as-read-successfully=Obvestila so bila označena kot uspešno prebrati. (Automatic Translation)
 notifications-were-marked-as-unread-successfully=Obvestila so bila uspešno označena kot neprebrana. (Automatic Translation)
