--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Vill du verkligen inaktivera den h
 are-you-sure-you-want-to-deactivate-workflow=Vill du verkligen avaktivera arbetsflödesfunktionen?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Vill du verkligen ta bort alla åtgärder och tillhörande inställningar?
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Vill du verkligen ta bort alla uppdrag och tillhörande inställningar?
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Vill du verkligen ta bort de valda skisserna?
 are-you-sure-you-want-to-delete-elements=Vill du verkligen ta bort de valda elementen?
@@ -4712,6 +4713,7 @@ delete-live-page=Ta bort live sida.
 delete-missing-layouts=Ta bort saknade sidor
 delete-missing-layouts-help=Om det här alternativet väljs tas alla sidor på den här webbplatsen som inte finns i den importerade LAR-filen bort.
 delete-missing-layouts-staging-help=Om det här alternativet väljs tas alla sidor i live-miljön som inte finns i mellanlagringsmiljön bort.
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Ta bort sida
 delete-personal-data=Ta bort personuppgifter
 delete-question=Ta bort fråga?
@@ -10148,6 +10150,7 @@ notification-recipients=Aviseringsmottagare
 notification-template-type=Malltyp för avisering
 notification-templates=Aviseringsmallar
 notification-type=Aviseringstyp
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=Avisering har tagits bort.
 notification-was-marked-as-read-successfully=Avisering har markerats som läst.
 notification-was-marked-as-unread-successfully=Avisering har markerats som oläst.
@@ -10156,7 +10159,6 @@ notifications-body=Aviseringstext
 notifications-email=E-postaviseringar
 notifications-list-x=Aviseringslista ({0})
 notifications-subject=Aviseringsämne
-notifications-type=Aviseringstyp
 notifications-were-deleted-successfully=Aviseringar har tagits bort.
 notifications-were-marked-as-read-successfully=Aviseringar har markerats som lästa.
 notifications-were-marked-as-unread-successfully=Aviseringar har markerats som olästa.
