--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=确定要停用此用户吗？
 are-you-sure-you-want-to-deactivate-workflow=确定要禁用此工作流吗？
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=确定要删除所有操作及其设置吗？
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=确定要删除所有分配及其设置吗？
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=确定要删除所有计时器及其设置吗？
 are-you-sure-you-want-to-delete-blueprints=确定要删除所选蓝图吗？
 are-you-sure-you-want-to-delete-elements=确定要删除所选元素吗？
@@ -4712,6 +4713,7 @@ delete-live-page=删除在线页面。
 delete-missing-layouts=删除丢失的页面
 delete-missing-layouts-help=如果选择此项，则此站点中在导入LAR文件中不存在的所有页面均被删除。
 delete-missing-layouts-staging-help=如果选择此项，所有在Live环境中却不在Staging环境中显示的页面均被删除。
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=删除页面
 delete-personal-data=删除个人数据
 delete-question=删除问题？
@@ -10150,6 +10152,7 @@ notification-recipients=通知收件人
 notification-template-type=通知模板类型
 notification-templates=通知模板
 notification-type=通知类型
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=通知已成功删除。
 notification-was-marked-as-read-successfully=通知已成功标记为已读。
 notification-was-marked-as-unread-successfully=通知已成功标记为未读。
@@ -10158,7 +10161,6 @@ notifications-body=通知正文
 notifications-email=通知电子邮件
 notifications-list-x=通知列表 ({0})
 notifications-subject=通知主题
-notifications-type=通知类型
 notifications-were-deleted-successfully=通知已成功删除。
 notifications-were-marked-as-read-successfully=通知已成功标记为已读。
 notifications-were-marked-as-unread-successfully=通知已成功标记为未读。
