--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=是否確定停用該使用者？
 are-you-sure-you-want-to-deactivate-workflow=是否確定要停用工作流程嗎？
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
 are-you-sure-you-want-to-delete-elements=確定要刪除選定的元素嗎？
@@ -4712,6 +4713,7 @@ delete-live-page=刪除Live頁面。
 delete-missing-layouts=刪除遺失頁面
 delete-missing-layouts-help=如果選擇此選項,則將刪除此網站中未存在於導入 LAR 檔中的所有頁面。 (Automatic Translation)
 delete-missing-layouts-staging-help=如果選擇此選項,則將刪除暫存環境中不存在的即時環境中的所有頁面。 (Automatic Translation)
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=刪除頁面
 delete-personal-data=刪除個人資料
 delete-question=刪除問題？
@@ -10149,6 +10151,7 @@ notification-recipients=通知收件人
 notification-template-type=通知版型類別
 notification-templates=通知版型
 notification-type=通知類型
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=通知已成功刪除。
 notification-was-marked-as-read-successfully=通知已成功標記為讀取。
 notification-was-marked-as-unread-successfully=通知已成功標記為未讀取。
@@ -10157,7 +10160,6 @@ notifications-body=通知正文
 notifications-email=通知 Email
 notifications-list-x=通知列表 ({0})
 notifications-subject=通知主旨
-notifications-type=通知類型
 notifications-were-deleted-successfully=通知已成功刪除。
 notifications-were-marked-as-read-successfully=通知已成功標記為讀取。
 notifications-were-marked-as-unread-successfully=通知已成功標記為未讀取。
