--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Segur que voleu desactivar aquest 
 are-you-sure-you-want-to-deactivate-workflow=Segur que voleu desactivar el flux de treball?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Confirmeu que voleu suprimir totes les accions i els seus paràmetres?
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Confirmeu que voleu suprimir totes les assignacions i els seus paràmetres?
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Confirmeu que voleu suprimir tots els temporitzadors i els seus paràmetres?
 are-you-sure-you-want-to-delete-blueprints=Segur que voleu suprimir els plànols seleccionats?
 are-you-sure-you-want-to-delete-elements=Segur que voleu suprimir els elements seleccionats?
@@ -4712,6 +4713,7 @@ delete-live-page=Elimina la pàgina activa.
 delete-missing-layouts=Esborra les pàgines que no apareguin
 delete-missing-layouts-help=Si es tria aquesta opció, s'eliminen totes les pàgines d'aquest lloc que no estan presents a l'arxiu d'importació LAR.
 delete-missing-layouts-staging-help=Si es tria aquesta opció, totes les pàgines en l'entorn Live que no estan presents en l'entorn de staging s'eliminaran.
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Esborra la pàgina
 delete-personal-data=Suprimeix dades personals
 delete-question=Voleu suprimir la pregunta?
@@ -10150,6 +10152,7 @@ notification-recipients=Destinataris de la notificació
 notification-template-type=Tipus de Plantilla de Notificació
 notification-templates=Plantilles de Notificació
 notification-type=Tipus de notificació
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=La notificació s'ha suprimit correctament.
 notification-was-marked-as-read-successfully=La notificació s'ha marcat correctament com a llegida.
 notification-was-marked-as-unread-successfully=La notificació s'ha marcat correctament com a no llegida.
@@ -10158,7 +10161,6 @@ notifications-body=Cos de notificacions
 notifications-email=Correu electrònic de notificacions
 notifications-list-x=Llista de notificacions ({0})
 notifications-subject=Tema de notificacions
-notifications-type=Tipus de notificacions
 notifications-were-deleted-successfully=Les notificacions s'han suprimit correctament.
 notifications-were-marked-as-read-successfully=Les notificacions s'han marcat correctament com a llegides.
 notifications-were-marked-as-unread-successfully=Les notificacions s'han marcat correctament com a no llegides.
