--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_cs.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Opravdu chcete tohoto uživatele d
 are-you-sure-you-want-to-deactivate-workflow=Opravdu chcete deaktivovat workflow?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
 are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
@@ -4712,6 +4713,7 @@ delete-live-page=Smazat produkční stránku
 delete-missing-layouts=Odstranit stránky, chybějící v importovaných stránkách
 delete-missing-layouts-help=Pokud je vybrána tato možnost, budou odstraněny všechny stránky na tomto webu, které nejsou přítomny v importu souboru LAR. (Automatic Translation)
 delete-missing-layouts-staging-help=Pokud je vybrána tato možnost, budou odstraněny všechny stránky v živém prostředí, které nejsou k dispozici v přípravném prostředí. (Automatic Translation)
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Vymazat stránku
 delete-personal-data=Odstranit osobní údaje (Automatic Translation)
 delete-question=Odstranit otázku? (Automatic Translation)
@@ -10148,6 +10150,7 @@ notification-recipients=Příjemci oznámení (Automatic Translation)
 notification-template-type=Typ šablony upozornění
 notification-templates=Šablony upozornění
 notification-type=Typ oznámení (Automatic Translation)
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=Oznámení bylo úspěšně odstraněno. (Automatic Translation)
 notification-was-marked-as-read-successfully=Oznámení bylo úspěšně označeno jako přečtené. (Automatic Translation)
 notification-was-marked-as-unread-successfully=Oznámení bylo úspěšně označeno jako nepřečtené. (Automatic Translation)
@@ -10156,7 +10159,6 @@ notifications-body=Orgán oznámení (Automatic Translation)
 notifications-email=Oznámení e-mail (Automatic Translation)
 notifications-list-x=Notifications List ({0}) (Automatic Copy)
 notifications-subject=Předmět oznámení (Automatic Translation)
-notifications-type=Notifications Type (Automatic Copy)
 notifications-were-deleted-successfully=Oznámení byla úspěšně odstraněna. (Automatic Translation)
 notifications-were-marked-as-read-successfully=Oznámení byla úspěšně označena jako přečtená. (Automatic Translation)
 notifications-were-marked-as-unread-successfully=Oznámení byla úspěšně označena jako nepřečtená. (Automatic Translation)
