--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_da.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Er du sikker på, at du vil deakti
 are-you-sure-you-want-to-deactivate-workflow=Are you sure you want to deactivate workflow? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
 are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
@@ -4712,6 +4713,7 @@ delete-live-page=Slet live page.
 delete-missing-layouts=Slet Missing sider
 delete-missing-layouts-help=Hvis denne indstilling er valgt, slettes alle de sider på webstedet, der ikke findes i import LAR-filen. (Automatic Translation)
 delete-missing-layouts-staging-help=Hvis denne indstilling vælges, slettes alle de sider i det dynamiske miljø, der ikke findes i det midlertidige miljø. (Automatic Translation)
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Slet side
 delete-personal-data=Slet personlige data (Automatic Translation)
 delete-question=Vil du slette spørgsmålet? (Automatic Translation)
@@ -10148,6 +10150,7 @@ notification-recipients=Notification Recipients (Automatic Copy)
 notification-template-type=Skabelontype for besked (Automatic Translation)
 notification-templates=Skabeloner til beskeder (Automatic Translation)
 notification-type=Notification Type (Automatic Copy)
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=Meddelelsen blev slettet. (Automatic Translation)
 notification-was-marked-as-read-successfully=Meddelelsen blev markeret som læst. (Automatic Translation)
 notification-was-marked-as-unread-successfully=Besked blev markeret som ulæst. (Automatic Translation)
@@ -10156,7 +10159,6 @@ notifications-body=Meddelelsestekst (Automatic Translation)
 notifications-email=E-mail med meddelelser (Automatic Translation)
 notifications-list-x=Notifications List ({0}) (Automatic Copy)
 notifications-subject=Meddelelser Emne (Automatic Translation)
-notifications-type=Notifications Type (Automatic Copy)
 notifications-were-deleted-successfully=Meddelelserne blev slettet. (Automatic Translation)
 notifications-were-marked-as-read-successfully=Meddelelser blev markeret som læst. (Automatic Translation)
 notifications-were-marked-as-unread-successfully=Meddelelser blev markeret som ulæste. (Automatic Translation)
