--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Sind Sie sicher, dass Sie diesen B
 are-you-sure-you-want-to-deactivate-workflow=Sind Sie sicher, dass Sie diesen Workflow deaktivieren möchten?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Sind Sie sicher, dass Sie alle Aktionen und deren Einstellungen löschen möchten?
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Sind Sie sicher, dass Sie alle Zuweisungen und deren Einstellungen löschen möchten?
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Sind Sie sicher, dass Sie die ausgewählten Blueprints löschen möchten?
 are-you-sure-you-want-to-delete-elements=Sind Sie sicher, dass Sie die ausgewählten Elemente löschen möchten?
@@ -4712,6 +4713,7 @@ delete-live-page=Seite im Livesystem löschen.
 delete-missing-layouts=Fehlende Seiten löschen
 delete-missing-layouts-help=Ist diese Option ausgewählt, werden alle nicht in der zu importierenden LAR-Datei vorhandenen Seiten dieser Site gelöscht.
 delete-missing-layouts-staging-help=Ist diese Option ausgewählt, werden alle nicht im Livesystem vorhandenen Seiten der Stagingumgebung gelöscht.
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Seite löschen
 delete-personal-data=Persönliche Daten löschen
 delete-question=Frage löschen?
@@ -10150,6 +10152,7 @@ notification-recipients=Empfänger der Benachrichtigung
 notification-template-type=Typ der Benachrichtigungsvorlage
 notification-templates=Benachrichtigungsvorlagen
 notification-type=Benachrichtigungsart
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=Die Benachrichtigung wurde erfolgreich gelöscht.
 notification-was-marked-as-read-successfully=Die Benachrichtigung wurde erfolgreich als gelesen markiert.
 notification-was-marked-as-unread-successfully=Die Benachrichtigung wurde erfolgreich als ungelesen markiert.
@@ -10158,7 +10161,6 @@ notifications-body=Inhalt der Benachrichtigung
 notifications-email=Benachrichtigungs-E-Mail
 notifications-list-x=Liste der Benachrichtigungen ({0})
 notifications-subject=Betreff der Benachrichtigung
-notifications-type=Benachrichtigungsart
 notifications-were-deleted-successfully=Die Benachrichtigungen wurden erfolgreich gelöscht.
 notifications-were-marked-as-read-successfully=Die Benachrichtigungen wurden erfolgreich als gelesen markiert.
 notifications-were-marked-as-unread-successfully=Die Benachrichtigungen wurden erfolgreich als ungelesen markiert.
