--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=¿Está seguro de que quiere desac
 are-you-sure-you-want-to-deactivate-workflow=¿Está seguro de que desea desactivar el workflow?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=¿Seguro que quiere eliminar todas las acciones y sus ajustes?
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=¿Seguro que quiere eliminar todas las asignaciones y sus ajustes?
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=¿Seguro que quiere eliminar los planos seleccionados?
 are-you-sure-you-want-to-delete-elements=¿Seguro que quiere eliminar los elementos seleccionados?
@@ -4712,6 +4713,7 @@ delete-live-page=Borrar esta página en el entorno Live.
 delete-missing-layouts=Eliminar las páginas no presentes en el archivo importado
 delete-missing-layouts-help=Si esta opción es escogida, todas las páginas de este sitio que no estén presentes en el archivo de importación LAR serán excluidas.
 delete-missing-layouts-staging-help=Si se escoge esta opción, todas las páginas del entorno Live que no estén presentes en el entorno de Staging serán excluidas.
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Eliminar página
 delete-personal-data=Eliminar datos personales
 delete-question=¿Quiere eliminar la pregunta?
@@ -10150,6 +10152,7 @@ notification-recipients=Destinatarios de notificación
 notification-template-type=Tipo de plantilla de notificación
 notification-templates=Plantillas de notificación
 notification-type=Tipo de notificación
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=La notificación se eliminó correctamente.
 notification-was-marked-as-read-successfully=La notificación se marcó correctamente como leída.
 notification-was-marked-as-unread-successfully=La notificación se marcó correctamente como no leída.
@@ -10158,7 +10161,6 @@ notifications-body=Cuerpo de notificaciones
 notifications-email=Correo electrónico de notificaciones
 notifications-list-x=Lista de notificaciones ({0})
 notifications-subject=Asunto de notificaciones
-notifications-type=Tipo de notificaciones
 notifications-were-deleted-successfully=Las notificaciones se eliminaron correctamente.
 notifications-were-marked-as-read-successfully=Las notificaciones se marcaron correctamente como leídas.
 notifications-were-marked-as-unread-successfully=Las notificaciones se marcaron correctamente como no leídas.
