--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_et.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Kas soovite kindlasti selle kasuta
 are-you-sure-you-want-to-deactivate-workflow=Kas oled kindel, et soovid töövoo deaktiveerida?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
 are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
@@ -4712,6 +4713,7 @@ delete-live-page=Kustutage reaalajas leht. (Automatic Translation)
 delete-missing-layouts=Kustuta puuduolevad vormingud
 delete-missing-layouts-help=Kui see suvand on valitud, kustutatakse kõik selle saidi lehed, mida pole lar-faili importimises. (Automatic Translation)
 delete-missing-layouts-staging-help=Kui see suvand on valitud, kustutatakse kõik lehed live keskkonnas, mida ei ole vahekausta keskkonnas. (Automatic Translation)
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Kustuta leht
 delete-personal-data=Kustuta isikuandmed (Automatic Translation)
 delete-question=Kas soovite küsimuse kustutada? (Automatic Translation)
@@ -10148,6 +10150,7 @@ notification-recipients=Teatise adressaadid (Automatic Translation)
 notification-template-type=Teatisemalli tüüp (Automatic Translation)
 notification-templates=Teatisemallid (Automatic Translation)
 notification-type=Teatise tüüp (Automatic Translation)
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=Teatis kustutati edukalt. (Automatic Translation)
 notification-was-marked-as-read-successfully=Teatis märgiti edukalt loetuks. (Automatic Translation)
 notification-was-marked-as-unread-successfully=Teatis märgiti edukalt mitteloetuks. (Automatic Translation)
@@ -10156,7 +10159,6 @@ notifications-body=Teavituste keha (Automatic Translation)
 notifications-email=Teatiste meil (Automatic Translation)
 notifications-list-x=Notifications List ({0}) (Automatic Copy)
 notifications-subject=Teatiste teema (Automatic Translation)
-notifications-type=Notifications Type (Automatic Copy)
 notifications-were-deleted-successfully=Teatised kustutati edukalt. (Automatic Translation)
 notifications-were-marked-as-read-successfully=Teatised märgiti edukalt loetuks. (Automatic Translation)
 notifications-were-marked-as-unread-successfully=Teatised märgiti edukalt mitteloetuks. (Automatic Translation)
