--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Haluatko varmasti poistaa tämän 
 are-you-sure-you-want-to-deactivate-workflow=Oletko varma, että haluat deaktivoida työnkulun?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Oletko varma, että haluat poistaa kaikki toiminnot ja niiden asetukset?
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Oletko varma, että haluat poistaa kaikki nimeämiset ja niiden asetukset?
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Oletko varma, että haluat poistaa kaikki ajastimet ja niiden asetukset?
 are-you-sure-you-want-to-delete-blueprints=Oletko varma, että haluat poistaa valitut blueprint-suunnitelmat?
 are-you-sure-you-want-to-delete-elements=Oletko varma, että haluat poistaa valitut elementit?
@@ -4712,6 +4713,7 @@ delete-live-page=Poista julkinen sivu.
 delete-missing-layouts=Poista puuttuvat sivut
 delete-missing-layouts-help=Tämän ollessa valittu kaikki tämän sivuston sivut, mitkä ei sisään tuotavassa LAR tiedostossa poistetaan.
 delete-missing-layouts-staging-help=Tämän ollessa valittu, kaikki sivut julkisella puolella, mitä ei löydy julkaisupuolella poistetaan.
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Poista sivu
 delete-personal-data=Poista Henkilökohtaiset Tiedot
 delete-question=Poista kysymys?
@@ -10148,6 +10150,7 @@ notification-recipients=Ilmoituksen Vastaanottajat
 notification-template-type=Ilmoitusmalli tyyppi
 notification-templates=Ilmoitusmallit
 notification-type=Ilmoitustyyppi
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=Ilmoitus poistettiin onnistuneesti.
 notification-was-marked-as-read-successfully=Ilmoitus merkittiin luetuksi onnistuneesti.
 notification-was-marked-as-unread-successfully=Ilmoitus merkittiin lukemattomaksi onnistuneesti.
@@ -10156,7 +10159,6 @@ notifications-body=Ilmoitusten Runko
 notifications-email=Ilmoitusten Sähköposti
 notifications-list-x=Ilmoitukset-luettelo ({0})
 notifications-subject=Ilmoitusten Aihe
-notifications-type=Ilmoitustyyppi
 notifications-were-deleted-successfully=Ilmoitukset poistettiin onnistuneesti.
 notifications-were-marked-as-read-successfully=Ilmoitukset merkittiin luetuiksi onnistuneesti.
 notifications-were-marked-as-unread-successfully=Ilmoitukset merkittiin lukemattomiksi onnistuneesti.
