--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nb.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Er du sikker på at du vil deaktiv
 are-you-sure-you-want-to-deactivate-workflow=Er du sikker på at du vil dekativere arbeidsflyten?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
 are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
@@ -4712,6 +4713,7 @@ delete-live-page=Slett side fra produksjonsmiljø.
 delete-missing-layouts=Slett manglende sider
 delete-missing-layouts-help=Hvis dette alternativet er valgt, slettes alle sidene på dette området som ikke finnes i import LAR-filen. (Automatic Translation)
 delete-missing-layouts-staging-help=Hvis dette alternativet er valgt, slettes alle sidene i det levende miljøet som ikke finnes i oppsamlingsmiljøet. (Automatic Translation)
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Slett side
 delete-personal-data=Slett personopplysninger (Automatic Translation)
 delete-question=Slett spørsmål? (Automatic Translation)
@@ -10148,6 +10150,7 @@ notification-recipients=Mottakere av varsling (Automatic Translation)
 notification-template-type=Varslingsmaltype
 notification-templates=Varslingsmaler
 notification-type=Varslingstype (Automatic Translation)
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=Meldingen ble slettet.
 notification-was-marked-as-read-successfully=Meldingen ble markert som lest.
 notification-was-marked-as-unread-successfully=Meldinger ble markert som ulest.
@@ -10156,7 +10159,6 @@ notifications-body=Brødtekst for varslinger (Automatic Translation)
 notifications-email=E-postvarsler (Automatic Translation)
 notifications-list-x=Meldingsliste ({0})
 notifications-subject=Emne for varsler (Automatic Translation)
-notifications-type=Notifications Type (Automatic Copy)
 notifications-were-deleted-successfully=Meldinger ble slettet.
 notifications-were-marked-as-read-successfully=Meldinger ble markert som lest.
 notifications-were-marked-as-unread-successfully=Meldinger ble markert som ulest.
