--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pl.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Czy na pewno chcesz dezaktywować 
 are-you-sure-you-want-to-deactivate-workflow=Na pewno chcesz wyłączyć przepływ zadań?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
 are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
@@ -4712,6 +4713,7 @@ delete-live-page=Usuń stronę produkcyjną.
 delete-missing-layouts=Usuń brakujące strony
 delete-missing-layouts-help=Jeśli ta opcja jest wybrana, wszystkie strony w tej witrynie, które nie są obecne w pliku importu LAR, zostaną usunięte. (Automatic Translation)
 delete-missing-layouts-staging-help=Jeśli ta opcja jest wybrana, wszystkie strony w środowisku na żywo, które nie są obecne w środowisku przejściowym są usuwane. (Automatic Translation)
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Usuń stronę
 delete-personal-data=Usuń dane osobowe (Automatic Translation)
 delete-question=Czy usunąć pytanie? (Automatic Translation)
@@ -10148,6 +10150,7 @@ notification-recipients=Adresaci powiadomień (Automatic Translation)
 notification-template-type=Typ szablonu powiadomień
 notification-templates=Szablony powiadomień
 notification-type=Typ powiadomienia (Automatic Translation)
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=Powiadomienie zostało pomyślnie usunięte. (Automatic Translation)
 notification-was-marked-as-read-successfully=Powiadomienie zostało oznaczone jako przeczytane pomyślnie. (Automatic Translation)
 notification-was-marked-as-unread-successfully=Powiadomienie zostało oznaczone jako nieprzeczytane pomyślnie. (Automatic Translation)
@@ -10156,7 +10159,6 @@ notifications-body=Treść powiadomień (Automatic Translation)
 notifications-email=Wiadomości e-mail z powiadomieniami (Automatic Translation)
 notifications-list-x=Notifications List ({0}) (Automatic Copy)
 notifications-subject=Temat powiadomień (Automatic Translation)
-notifications-type=Notifications Type (Automatic Copy)
 notifications-were-deleted-successfully=Powiadomienia zostały pomyślnie usunięte. (Automatic Translation)
 notifications-were-marked-as-read-successfully=Powiadomienia zostały oznaczone jako przeczytane pomyślnie. (Automatic Translation)
 notifications-were-marked-as-unread-successfully=Powiadomienia zostały oznaczone jako nieprzeczytane pomyślnie. (Automatic Translation)
