--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ro.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Sigur dezactivați acest utilizato
 are-you-sure-you-want-to-deactivate-workflow=Ești sigur că vrei să dezactivezi fluxul de lucru?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
 are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
@@ -4712,6 +4713,7 @@ delete-live-page=Șterge Pagină live.
 delete-missing-layouts=Sterge Paginile Lipsă
 delete-missing-layouts-help=Dacă această opțiune este aleasă, toate paginile din acest site care nu sunt prezente în fișierul LAR de import sunt șterse. (Automatic Translation)
 delete-missing-layouts-staging-help=Dacă această opțiune este aleasă, toate paginile din mediul live care nu sunt prezente în mediul de așteptare sunt șterse. (Automatic Translation)
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Șterge Pagină
 delete-personal-data=Ștergere date cu caracter personal (Automatic Translation)
 delete-question=Ștergeți întrebarea? (Automatic Translation)
@@ -10148,6 +10150,7 @@ notification-recipients=Destinatari notificare (Automatic Translation)
 notification-template-type=Tip șablon notificare (Automatic Translation)
 notification-templates=Șabloane de notificare (Automatic Translation)
 notification-type=Tip notificare (Automatic Translation)
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=Notificarea a fost ștearsă cu succes. (Automatic Translation)
 notification-was-marked-as-read-successfully=Notificarea a fost marcată ca citită cu succes. (Automatic Translation)
 notification-was-marked-as-unread-successfully=Notificarea a fost marcată ca necitită cu succes. (Automatic Translation)
@@ -10156,7 +10159,6 @@ notifications-body=Organismul de notificări (Automatic Translation)
 notifications-email=Notificări e-mail (Automatic Translation)
 notifications-list-x=Notifications List ({0}) (Automatic Copy)
 notifications-subject=Subiectul notificărilor (Automatic Translation)
-notifications-type=Notifications Type (Automatic Copy)
 notifications-were-deleted-successfully=Notificările au fost șterse cu succes. (Automatic Translation)
 notifications-were-marked-as-read-successfully=Notificările au fost marcate ca citite cu succes. (Automatic Translation)
 notifications-were-marked-as-unread-successfully=Notificările au fost marcate ca necitite cu succes. (Automatic Translation)
