--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ru.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Вы уверены, что хот
 are-you-sure-you-want-to-deactivate-workflow=Вы увереныв том, что хотите деактивировать этот рабочий процесс?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
 are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
@@ -4712,6 +4713,7 @@ delete-live-page=Удалить действующую страницу.
 delete-missing-layouts=Удалить пропавшие страницы
 delete-missing-layouts-help=Если этот параметр выбран, все страницы на этом сайте, которые не присутствуют в импорте LAR файл удаляется. (Automatic Translation)
 delete-missing-layouts-staging-help=Если выбран этот параметр, все страницы в живой среде, которые не присутствуют в среде постановки, удаляются. (Automatic Translation)
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Удалить страницу
 delete-personal-data=Удаление личных данных (Automatic Translation)
 delete-question=Удалить вопрос? (Automatic Translation)
@@ -10148,6 +10150,7 @@ notification-recipients=Получатели уведомлений (Automatic T
 notification-template-type=Тип шаблона уведомления
 notification-templates=Шаблоны уведомления
 notification-type=Тип уведомления (Automatic Translation)
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=Уведомление было успешно удалено. (Automatic Translation)
 notification-was-marked-as-read-successfully=Уведомление было помечено как успешное чтение. (Automatic Translation)
 notification-was-marked-as-unread-successfully=Уведомление было отмечено как непрочитанный успешно. (Automatic Translation)
@@ -10156,7 +10159,6 @@ notifications-body=Тело уведомлений (Automatic Translation)
 notifications-email=Уведомления По электронной почте (Automatic Translation)
 notifications-list-x=Notifications List ({0}) (Automatic Copy)
 notifications-subject=Тема уведомлений (Automatic Translation)
-notifications-type=Notifications Type (Automatic Copy)
 notifications-were-deleted-successfully=Уведомления были успешно удалены. (Automatic Translation)
 notifications-were-marked-as-read-successfully=Уведомления были отмечены как успешно читаемые. (Automatic Translation)
 notifications-were-marked-as-unread-successfully=Уведомления были отмечены как непрочитанные успешно. (Automatic Translation)
