--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sk.properties
@@ -1551,6 +1551,7 @@ are-you-sure-you-want-to-deactivate-this-user=Naozaj chcete deaktivovať tohto p
 are-you-sure-you-want-to-deactivate-workflow=Ste si istý, že chcete deaktivovať pracovný postup?
 are-you-sure-you-want-to-delete-all-actions-and-their-settings=Are you sure you want to delete all actions and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-assignments-and-their-settings=Are you sure you want to delete all assignments and their settings? (Automatic Copy)
+are-you-sure-you-want-to-delete-all-notifications-and-their-settings=Are you sure you want to delete all notifications and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-all-timers-and-their-settings=Are you sure you want to delete all timers and their settings? (Automatic Copy)
 are-you-sure-you-want-to-delete-blueprints=Are you sure you want to delete selected blueprints? (Automatic Copy)
 are-you-sure-you-want-to-delete-elements=Are you sure you want to delete selected elements? (Automatic Copy)
@@ -4712,6 +4713,7 @@ delete-live-page=Vymaž produkčnú stránku.
 delete-missing-layouts=Vymazať chýbajúce stránky
 delete-missing-layouts-help=Ak je vybratá táto možnosť, odstránia sa všetky stránky na tejto lokalite, ktoré nie sú prítomné v súbore IMPORT LAR. (Automatic Translation)
 delete-missing-layouts-staging-help=Ak je vybratá táto možnosť, odstránia sa všetky stránky v živom prostredí, ktoré nie sú prítomné v oddychové prostredie. (Automatic Translation)
+delete-notifications=Delete Notifications (Automatic Copy)
 delete-page=Vymazať stránku
 delete-personal-data=Odstrániť osobné údaje (Automatic Translation)
 delete-question=Odstrániť otázku? (Automatic Translation)
@@ -10148,6 +10150,7 @@ notification-recipients=Príjemcovia upozornení (Automatic Translation)
 notification-template-type=Typ notifikačnej šablóny
 notification-templates=Šablóny notifikácie
 notification-type=Typ upozornenia (Automatic Translation)
+notification-types=Notification Types (Automatic Copy)
 notification-was-deleted-successfully=Oznámenie bolo úspešne odstránené. (Automatic Translation)
 notification-was-marked-as-read-successfully=Upozornenie bolo úspešne označené ako prečítané. (Automatic Translation)
 notification-was-marked-as-unread-successfully=Upozornenie bolo úspešne označené ako neprečítané. (Automatic Translation)
@@ -10156,7 +10159,6 @@ notifications-body=Orgán oznámení (Automatic Translation)
 notifications-email=Oznámenia E-mail (Automatic Translation)
 notifications-list-x=Notifications List ({0}) (Automatic Copy)
 notifications-subject=Predmet upozornení (Automatic Translation)
-notifications-type=Notifications Type (Automatic Copy)
 notifications-were-deleted-successfully=Oznámenia boli úspešne odstránené. (Automatic Translation)
 notifications-were-marked-as-read-successfully=Oznámenia boli úspešne označené ako prečítané. (Automatic Translation)
 notifications-were-marked-as-unread-successfully=Upozornenia boli úspešne označené ako neprečítané. (Automatic Translation)
